# qa-tensor

./: .gitignore  LICENSE  README.md  pyproject.toml  reqs.txt
tests/: test_first.py  test_second.py
