[tool.poetry]
name = "qa-tensor"
version = "0.0.1"
description = ""
authors = ["idk <me@idk-dev.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
selenium = "^4.24.0"
webdriver-manager = "^4.0.2"
loguru = "^0.7.2"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
